# spenn

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
spenn-api/: .gitignore  Cargo.toml
spenn-api/src/: db.rs  main.rs  models.rs  schema.rs  services.rs
spenn-entity/: Cargo.toml
spenn-entity/src/: expense.rs  lib.rs  mac.rs  user.rs
spenn-gui/: Makefile  index.html  package-lock.json  package.json  vite.config.ts
spenn-gui/src/: app.tsx  routeTree.gen.ts
spenn-gui/src-tauri/: Cargo.toml  tauri.conf.json
spenn-gui/src/components/: breadcrumbs.tsx  expense.tsx  loading.tsx
spenn-gui/src/routes/: __root.tsx  about.lazy.tsx  analytics.lazy.tsx  index.lazy.tsx  macs.lazy.tsx  spending.lazy.tsx  spending_.$uuid.lazy.tsx
spenn-gui/src/types/: analytics.ts  expense.ts  mac.ts
