[workspace]
members = [
    "spenn-api",
    "spenn-entity",
    "spenn-gui/src-tauri",
]

[workspace.dependencies]
dotenv = { version = "*" }
sea-orm = { version = "0.12", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
serde = { version = "1.0", features = ["derive"] }
