[package]
name = "spenn-entity"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = { version = "*" }
sea-orm = { version = "=0.12.14", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics", "serde"]}
serde = { version = "1.0", features = ["derive"] }
actix-web = {version = "4" }
chrono = { version = "*" }
